improve ball reflection, added reset, squashed bugs

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 #playPauseButton {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 60px;
     z-index: 1;
     font-size: 1.2rem;
     padding: 5px 10px;
@@ -44,3 +44,31 @@ body {
 #pauseIcon, #playIcon {
     font-size: 1.5rem;
 }
+
+#restartButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1;
+    font-size: 2.1rem;
+    font-weight: 900;
+    width: 40px;
+    height: 37.5px;
+    padding: 0px 10px 5px 10px;
+    background-color: #6db746;
+    color: white;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#restartButton:focus {
+  outline: none;
+}
+
+#restartButton:hover {
+  background-color: #4a9a34;
+}
+
